--- a/House_Price_Prediction.ipynb
+++ b/House_Price_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIxetINMB9vnMF4luSSXq8",
+      "authorship_tag": "ABX9TyOw5VCHW0oxfWttjV5bfZzF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,15 +28,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tyEkVw1CN2mE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "## 🏡 House Price Prediction (Regression)\n",
         "\n",
@@ -51,7 +42,7 @@
       "metadata": {
         "id": "v70iZItPN4_d"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +65,7 @@
         "id": "6QJSyfgFN-Vt",
         "outputId": "e3313915-d3f0-46f6-bf69-36b00f086183"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +105,7 @@
         "id": "SY6xYAzwOIep",
         "outputId": "3742801a-eca2-4dc4-fbf0-3729f6e24076"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -143,7 +134,7 @@
         "id": "OyFjJBXSOLz9",
         "outputId": "641f08b2-1027-4866-8bd6-a65910e2a76c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +582,7 @@
         "id": "Z-ksfgC1OO2K",
         "outputId": "db8930f6-704e-4508-88e8-e1d299753ddd"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,7 +612,7 @@
         "id": "neLFPTTEOR84",
         "outputId": "7891fc07-191c-4f32-8dc2-86ca4c282b8d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -638,7 +629,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 8️⃣ Predict New House Price (✅ No Warning)\n",
+        "# 8️⃣ Predict New House Price\n",
         "new_house = pd.DataFrame([[2800, 4, 3]], columns=['Area', 'Bedrooms', 'Bathrooms'])\n",
         "predicted_price = model.predict(new_house)\n",
         "print(\"Predicted Price for new house:\", predicted_price[0])\n"
@@ -650,7 +641,7 @@
         "id": "JtiQM4TWNqHi",
         "outputId": "68c220e7-6a67-4619-e9ad-47f3199785e9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
